@@ -75,7 +75,7 @@ src_libmingwex=\
   intrincs/bittests.c   intrincs/bittestsi.c   intrincs/bitscanfwd.c intrincs/bitscanrev.c intrincs/ilockinc16.c \
   intrincs/ilockdec16.c intrincs/ilockcxch16.c intrincs/ilockexchadd.c intrincs/ilockand.c intrincs/ilockor.c    \
   intrincs/ilockxor.c   intrincs/ilockinc.c    intrincs/ilockdec.c intrincs/ilockexch.c intrincs/ilockcxch.c     \
-  intrincs/dbgassert.c  intrincs/membarrier.c  intrincs/currentteb.c intrincs/currentfiber.c intrincs/fiberdata.c \
+  intrincs/membarrier.c intrincs/currentteb.c  intrincs/currentfiber.c intrincs/fiberdata.c \
   intrincs/__stosb.c \
   \
   complex/cabs.c     complex/cabsf.c    complex/cabsl.c   complex/cacos.c    complex/cacosf.c   complex/cacosh.c \
