@@ -1,3 +1,7 @@
+2009-07-29  Ozkan Sezer  <sezeroz@gmail.com>
+
+	* intrincs/dbgassert.c: Deleted. (made into a macro in winnt.h)
+
 2009-07-29  Kai Tietz  <kai.tietz@onevision.com>
 
 	* intrincs/dbgassert.c: Fix assembly for x86.
